tests/fail/enum_with_no_variants.rs
use openapi_type::OpenapiType;

#[derive(OpenapiType)]
enum Foo {}

fn main() {}
